--- a/package.json
+++ b/package.json
@@ -6,14 +6,31 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/react-dropzone": "^5.1.0",
+    "@types/react-query": "^1.2.9",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/use-persisted-state": "^0.3.1",
+    "Buffer": "^0.0.0",
+    "axios": "^0.26.1",
+    "buffer": "^6.0.3",
+    "data-uri-to-buffer": "^4.0.0",
+    "emoji-picker-react": "^3.5.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-dropzone": "^12.0.4",
+    "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
+    "react-query": "^3.34.19",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.6.3",
+    "use-persisted-state": "^0.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +56,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
